--- a/task2.css
+++ b/task2.css
@@ -1,49 +1,128 @@
 
-.header{
-    width: 100%;
-}
-.header_logo{
-    display: flex;
-    align-items: center;
-}
-.logo{
-    flex-basis: 150px;
+header {
     height: 150px;
-    border-radius: 50%;
-    margin-right: 20px;
-    position: relative;
-    overflow: hidden;
+    background-color: rgb(204,255,255);
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
 }
-.logo_img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+.shapka {
     width: 100%;
-    object-fit: contain;
-    object-position: center;
-}
-.container{
-    margin:0 auto;
+    height: 155px;
     max-width: 960px;
-}
-.menu_list{
     display: flex;
-    gap:15px;
+    flex-direction: row;
+    align-items: center;
+    margin: 0px auto;
 }
-ul{
-    list-style-type: none;
+.shapka p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: rgb(6, 2, 8);
+    font-size: 50px;
+    letter-spacing: 5px;
 }
-table{
-    border-collapse: collapse;
+.shapka img {
+    width: 150px;
+    height: 150px;
+    margin-right: 20px;
 }
-td{
-    text-align: center;
+.navigation {
+    background-color: rgb(204,255,255);
+    height: 75px;
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
+}
+nav{
+    padding: 0px 30px 5px;
+}
+.navigation ul li {
+    display: block;
+    padding: 0px 50px 5px;
+    font-size: 35px;
+}
+.navigation nav ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+
+}
+body {
+    font-family: Courier, monospace;
+    font-size: 20px;
+    color: rgb(51, 51, 51);
+    background-image: url(wallpaper.jpg);
+    background-attachment: fixed;
+    font-weight: bold;
 }
 
-table tr:nth-child(even){
-    background: lightgrey;
+.web1 {
+    width: 960px;
+    background-color: rgb(204,255,255);
+    color: rgb(51, 51, 51);
+    margin: 20px auto;
+    padding: 0px 5px;
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
+    border-image: initial;
 }
-.footer{
-    width: 100%;
+.web1 img{
+    width: 100px;
+    height: 100px;
 }
+.table {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(204,255,255);
+    padding: 0px 5px 5px;
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
+    border-image: initial;
+}
+.form {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    background-color: rgb(204,255,255);
+    padding: 0px 5px 5px;
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
+    border-image: initial;
+}
+footer {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    padding: 0px 5px 5px;
+    border-width: thick;
+    border-style: double;
+    border-color: rgb(11, 211, 211);
+    border-image: initial;
+    background-color: rgb(204,255,255);
+
+}
+a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+th, .nech td{
+    color: rgb(51, 51, 51);
+    background-color: rgb(11, 211, 211);
+}
+
