--- a/task3.css
+++ b/task3.css
@@ -1,137 +1,154 @@
-header {
-    height: 150px;
-    background-color: rgb(204,255,255);
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-}
-.shapka {
-    width: 100%;
-    height: 155px;
-    max-width: 960px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px auto;
-}
-.shapka p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    color: rgb(6, 2, 8);
-    font-size: 50px;
-    letter-spacing: 5px;
-}
-.shapka img {
-    width: 150px;
-    height: 150px;
-    margin-right: 20px;
-}
-.navigation {
-    background-color: rgb(204,255,255);
-    height: 75px;
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-}
-nav{
-    padding: 0px 30px 5px;
-}
-.navigation ul li {
-    display: block;
-    padding: 0px 50px 5px;
-    font-size: 35px;
-}
-.navigation nav ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
+@media (max-width: 960px) {
+    body {
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-image: url(wallpaper.jpg);
+    }
+        
+    .header, .nav, .links, .table, .form, .footer {
+        background-color: rgb(204,255,255);
+        padding: 0.5em;
+    }
 
-}
-body {
-    font-family: Courier, monospace;
-    font-size: 20px;
-    color: rgb(51, 51, 51);
-    background-image: url(wallpaper.jpg);
-    background-attachment: fixed;
-    font-weight: bold;
-}
+    .container {
+        width: 100%;
+        margin: 0.5em auto;
+        padding-bottom: 0.3em;
+    }
+    #bheader {
+        margin: 0 2em;
+    }
 
-.web1 {
-    width: 960px;
-    background-color: rgb(204,255,255);
-    color: rgb(51, 51, 51);
-    margin: 20px auto;
-    padding: 0px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-    border-image: initial;
-}
-.web1 img{
-    width: 100px;
-    height: 100px;
-}
-.table {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(204,255,255);
-    padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-    border-image: initial;
-}
-.form {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    background-color: rgb(204,255,255);
-    padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-    border-image: initial;
-}
-footer {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    padding: 0px 5px 5px;
-    border-width: thick;
-    border-style: double;
-    border-color: rgb(11, 211, 211);
-    border-image: initial;
-    background-color: rgb(204,255,255);
+    .nav {
+        flex-direction: column;
+        display: flex;
+    }
 
-}
-a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-th, .nech td{
-    color: rgb(51, 51, 51);
-    background-color: rgb(11, 211, 211);
-}
-@media (max-width:480px) {
-    .navigation{
+    .navlink{
+        margin: 0.1em auto;
+        padding: 0 5px;
+        width: fit-content;
+        height: 32px;
+        background-color:rgb(204, 255, 255);     
+        border: 1px rgb(11, 211, 211);
+    }
+
+    .navlink a{
+        vertical-align: middle;
+        text-decoration: none;
+        font-weight: bold;
+        color: rgb(11, 211, 211);
+    }
+
+    li {
+        margin-bottom: 0.6em;
+    }
+
+    #main {
+        display: flex;
         flex-direction: column;
     }
-    table{
-        order: 4;
+
+    label {
+        font-size: large;
     }
-    #form{
-        order:3;
+
+    input, select, textarea {
+        font-size:20px;
+        size: 10em;
+        padding: 5px 10px 5px 10px;
+        margin-bottom: 1    em;
+    }
+
+
+
+    #main .table {
+        order: 1;
+    }
+
+    #main .form {
+        order: 0;
+    }
+
+    b {
+        font-size: 28px;
+    }
+
+    table {
+        background-color: rgb(204,255,255);
+        border: 1px solid;
+        border-style: double;
+        border-color: rgb(11, 211, 211);
+        border-image: initial;
+    }
+
+    td{
+        padding: 6px 10px 6px 10px;
+        text-align: center;
+    }
+    tr:nth-child(odd) {
+        background-color: rgb(11, 211, 211);
+        border-style: double;
+    }
+}
+
+@media (min-width: 960px) {
+    body {
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-image: url(wallpaper.jpg);
+    }
+        
+    .header, .nav, .links, .table, .form, .footer {
+        background-color: rgb(204,255,255);
+        padding: 0.2em;
+
+    }
+
+    .navlink{
+        margin: 0.1em auto;
+        padding: 0 5px;
+        width: fit-content;
+        height: 32px;
+        background-color:rgb(204, 255, 255);
+    }
+
+    .navlink a{
+        vertical-align: middle;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .container {
+        width: 100%;
+        margin: 0.5em auto;
+        padding-bottom: 0.1em;
+    }
+    #bheader {
+        margin: 0 2em;
+    }
+
+    .nav a{
+        margin-right:1em;
+    }
+
+    b {
+        font-size: 28px;
+    }
+
+    table {
+        background-color: rgb(204,255,255);
+        border: 1px solid;
+        border-style: double;
+        border-color: rgb(11, 211, 211);
+        border-image: initial;
+    }
+
+    td{
+        padding: 6px 10px 6px 10px;
+        text-align: center;
+    }
+
+    tr:nth-child(odd) {
+        background-color: rgb(11, 211, 211);
     }
 }
