--- a/task3.css
+++ b/task3.css
@@ -126,7 +126,9 @@
     #bheader {
         margin: 0 2em;
     }
-
+    .nav{
+        flex-direction: row;
+    }
     .nav a{
         margin-right:1em;
     }
