--- a/task5.css
+++ b/task5.css
@@ -30,7 +30,8 @@ body{
     color:white;
 }
 form{
-    border: thick double;
+    border: solid;
+    border-radius: 40%;
     border-collapse: collapse;
     margin:200px 200px 200px 200px;
     padding: 10% 10% 10% 20%;
