--- a/task5.css
+++ b/task5.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #666666;
+    background:linear-gradient(90deg, rgba(2,0,36,1) 18%, rgba(37,160,163,1) 59%, rgba(0,212,255,1) 78%, rgba(233,233,255,1) 100%) ;
 }
 
 #price{
@@ -30,21 +30,21 @@ body{
     color:white;
 }
 form{
-    border: solid;
-    border-radius: 40%;
+    border: 2px ridge;
     border-collapse: collapse;
-    margin:200px 200px 200px 200px;
-    padding: 10% 10% 10% 20%;
-    border-color: #333333;
+    margin: 100px;
+    padding: 50px;
+    border-radius: 50px;
     flex-direction: row;
+    background:linear-gradient(90deg, rgba(2,0,36,1) 18%, rgba(37,160,163,1) 59%, rgba(0,212,255,1) 78%, rgba(233,233,255,1) 100%);
 }
 @media screen and (max-width: 560px) {
     #price{
-        width: 100px;
+        width: 80px;
         font-size: 12px;
     }
     #quantity{
-        width: 100px;
+        width: 110px;
         font-size: 12px;
     }
 }
