--- a/css/style.css
+++ b/css/style.css
@@ -312,3 +312,291 @@ li {
     background: linear-gradient(300deg, rgba(0, 0, 0, 0.548));
     transform: rotate(-1deg);
 }
+/* --- ФУНКЦИИ СЕРВИСА --- */
+
+.functions {
+    margin-top: 160px;
+    width: 1440px;
+}
+
+/* Описание */
+
+.functions-title {
+    margin: 0px 700px 18px 339px;
+    width: 750px;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 51px;
+    margin-bottom: 18px;
+    color: #050C33;
+}
+
+.functions-text {
+    width: 580px;
+    margin-left: 339px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #050C33;
+    opacity: 0.7;
+}
+
+/*  Список функций  */
+
+.functions-list {
+    margin-left: 330px;
+    margin-top: 63px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.f-icon {
+    align-self: center;
+    justify-self: center;
+    height: 200px;
+    position: relative;
+    width: 182px;
+    margin-right: 147px;
+    margin-bottom: 50px;
+}
+
+.f-icon p {
+    margin-top: 25px;
+    width: 182px;
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.7;
+}
+
+.f-icon::before {
+    left: -30.22%;
+    right: 67.58%;
+    top: 8.76%;
+    bottom: 54.64%;
+    content: "";
+    height: 71px;
+    width: 114px;
+    background: url(../img/functions/icon-bg.svg) no-repeat;
+    position: absolute;
+}
+/* --- ПОДДЕРЖКА ОТ ПРОЕКТА DRUPAL --- */
+
+.support {
+    margin-top: 160px;
+    color: #050C33;
+}
+
+/* Общая информация */
+
+.support-title {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 51px;
+    width: 406px;
+    margin: 0px auto -140px;
+}
+
+/* Основные услуги */
+
+.support-list {
+    width: 1184px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 300px;
+}
+
+.support-item {
+    z-index: 2;
+    position: relative;
+    overflow: hidden;
+    width: 292px;
+    height: 292px;
+    padding: 30px 20px 0px 28px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    top: 205px;
+}
+
+/* Информация с карточек услуг */
+
+.support-item .support-item-number {
+    font-size: 12px;
+    opacity: 0.5;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.support-item .support-item-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 12px;
+}
+
+.support-item .support-item-txt {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.7;
+}
+
+/* Картинки списка услуг */
+
+.support-item-1::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support1.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-2::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support2.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-3::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support3.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-4::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support4.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-5::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support5.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-6::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support6.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-7::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support7.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+.support-item-8::before {
+    content: "";
+    width: 84px;
+    height: 84px;
+    background: url("../img/support/support8.svg") no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+}
+
+/* druplicon на фоне */
+
+.support-druplicon {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1060px;
+    height: 839px;
+}
+
+/* Ноутбук на фоне */
+
+.support-notebook {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 760px;
+    height: 562px;
+    z-index: 3;
+}
+
+/* support-wrapper && title */
+
+.support-wrapper {
+    position: relative;
+    height: 839px;
+    background: linear-gradient(261.2deg, rgba(255, 255, 255, 0.276) -114.85%, rgba(255, 255, 255, 0) 69.04%), #040613;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.support-wrapper .support-wrapper-body {
+    padding-top: 205px;
+    position: relative;
+    z-index: 2;
+}
+
+.support-expertise {
+    margin-top: 197px;
+    margin-left: auto;
+    margin-right: 430px;
+    width: 580px;
+}
+
+.support-expertise-title {
+    color: white;
+    width: 580px;
+    font-size: 42px;
+    line-height: 51px;
+    font-weight: 700;
+}
+
+/* Список элементов support*/
+
+.support-expertise-list {
+    display: flex;
+}
+
+.support-expertise-item {
+    width: 256px;
+    height: 100px;
+    padding: 10px 0px 0px 13px;
+    border-left: 3px solid #F14D34;
+    margin-right: 20px;
+    margin-top: 60px;
+}
+
+.support-expertise-item p {
+    color: white;
+    opacity: 0.7;
+    font-size: 16px;
+    line-height: 22px;
+}
