--- a/css/style.css
+++ b/css/style.css
@@ -1189,3 +1189,47 @@ li {
     border-radius: 5px;
 }
 
+/* ПАРТНЕРЫ ПРОЕКТА*/
+
+.partners {
+    overflow: hidden;
+    padding: 50px;
+}
+
+.partners-title {
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 51px;
+    text-align: center;
+    color: #050C33;
+    margin: 160px auto 10px;
+}
+
+.partners-txt {
+    width: 740px;
+    margin: 0 auto;
+    padding-bottom: 42px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    color: #050C33;
+    opacity: 0.7;
+}
+
+/* Слайдер */
+
+.partners .slick-track {
+    display: flex;
+}
+
+.partners .partners-slider-1 {
+    margin: 10px 0px;
+}
+
+.partners .slider-item {
+    height: 155px;
+    border: 1px solid #E5E5E5;
+    border-radius: 5px;
+    margin: 0px 10px;
+}
