--- a/css/style.css
+++ b/css/style.css
@@ -1478,3 +1478,237 @@ footer .footer-text {
     margin-bottom: 6px;
 }
 
+/* ОПТИМИЗАЦИЯ ДЛЯ СМАРТФОНОВ */
+
+@media screen and (max-width: 575px) {
+
+  html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  header {
+    padding: 0px;
+  }
+
+  .o-container {
+    width: 100%;
+  }
+
+  .min-container {
+    width: 100%;
+  }
+    
+  /* ШАПКА САЙТА */
+
+  .header {
+    text-align: center;
+  }
+
+  .header-container {
+    width: 100%;
+    flex-direction: column;
+    padding: 0px 20px;
+  }
+ 
+  .header-druplicon img {
+    height: 400px;
+    width: 400px;
+  }
+
+  .header-video {
+    width: 100%;
+    min-height: 800px;
+  }
+    
+     /* mmenu в шапке */
+
+  .header-mmenu {
+    right: 0;
+    bottom: 0;
+    margin: 15px;
+    position: fixed;
+    display: block;
+    width: 30px;
+    height: 18px;
+    z-index: 10;
+  }
+
+  .header-mmenu span {
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 2px;
+    top: 8px;
+    left: 0;
+    opacity: 0.5;
+  }
+
+  .header-mmenu::before,
+  .header-mmenu::after {
+    content: "";
+    background-color: white;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    opacity: 0.5;
+  }
+
+  .header-mmenu::before {
+    right: 0;
+  }
+
+  .header-mmenu::after {
+    bottom: 0;
+  }
+    
+    /* menu шапки */
+
+  .header-menu {
+    position: fixed;
+    background-color: #333;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    height: 48px;
+    justify-content: space-between;
+    padding: 0px 10px;
+  }
+
+  .header-container .header-menu li {
+    width: 100%;
+    border-bottom: 1px solid black;
+    padding: 8px 20px;
+    height: 39px;
+    z-index: 10;
+  }
+
+  .header-container .header-menu li:first-child a {
+    color: #F14D34;
+  }
+
+  .header-menu-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 620px;
+    bottom: -200%;
+    left: 0;
+    background-color: #333;
+    z-index: 4;
+    transition: 0.3s;
+  }
+
+  .header-menu-wrapper::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    z-index: 10;
+    border-top: 1px solid black;
+  }
+
+  .header-menu-wrapper .header-menu {
+    flex-direction: column;
+    text-align: initial;
+  }
+
+  .header-menu-wrapper .header-menu .header-lang {
+    margin-bottom: 155px;
+  }
+
+  .header-menu-wrapper .header-menu ul li {
+    margin-top: 15px;
+    width: 100%;
+    display: block;
+    margin-left: -20px;
+    background-color: #333;
+    padding: 0px;
+    border-top: 1px solid black;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+  }
+
+  .header-menu-wrapper .header-menu .submenu a {
+    font-size: 11px;
+    display: block;
+    height: 32px;
+    padding: 10px 20px;
+    padding-left: 40px;
+    border-bottom: 1px solid black;
+  }
+    
+    /* Основная информация хедера */
+
+  .header-content {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .header-content .header-txt {
+    width: 100%;
+    margin: 0px;
+  }
+
+  .header-content-title {
+    width: 240px;
+    line-height: 32px;
+    margin: auto;
+    text-align: center;
+    margin-top: 30px;
+    font-size: 25px;
+  }
+
+  .header-btn {
+    margin: 0px auto;
+  }
+  .header .header-btn {
+    background-color: inherit;
+    margin-bottom: 40px;
+  }
+
+  .header-content-text {
+    margin: 20px auto 40px;
+    width: 100%;
+    line-height: 20px;
+    font-size: 14px;
+    opacity: 0.7;
+  }
+
+  /* Достижения компании */
+
+  .header-achievement {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0;
+  }
+
+  .header .header-achievement .header-achievement-item {
+    text-align: start;
+    margin: 30px 30px 30px 40px;
+    width: 130px;
+  }
+
+  .header .header-achievement .header-achievement-item span {
+    font-family: "Montserrat";
+    font-size: 22px;
+    font-weight: 700;
+  }
+
+  .header .header-achievement .header-achievement-item p {
+    opacity: 0.7;
+    font-family: "Montserrat";
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 15px;
+    margin-top: 8px;
+  }
+
+  .header .header-achievement .header-achievement-item img {
+    position: absolute;
+    top: -10px;
+  }
+}
