--- a/css/style.css
+++ b/css/style.css
@@ -1712,4 +1712,113 @@ footer .footer-text {
     position: absolute;
     top: -10px;
   }
+    
+    
+  .functions {
+    padding: 60px 15px;
+  }
+
+  .functions-list {
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+  }
+
+  .functions .functions-title {
+    padding: 10px 10px;
+    margin: 0;
+    font-size: 25px;
+    line-height: 35px;
+    width: 100%;
+  }
+
+  .functions .functions-text {
+    margin: 0;
+    padding: 20px 10px;
+    width: 100%;
+  }
+
+  .functions-item {
+    width: 100%;
+    margin-right: 0px;
+  }
+
+  .functions-item p {
+    width: 135px;
+    font-size: 13px;
+    margin-top: 25px;
+    margin-left: 20px;
+  }
+
+  .functions-item img {
+    margin: 0px auto;
+    display: block;
+  }
+
+  .functions-item::before {
+    left: 0;
+    top: 8.76%;
+    bottom: 54.64%;
+    content: "";
+    height: 71px;
+    width: 114px;
+    background: url(../img/functions/icon-bg.svg) no-repeat;
+    position: absolute;
+  }
+    
+    
+    
+   .support {
+    margin: 0;
+    padding: 10px;
+  }
+
+  .support-list {
+    margin: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr
+  }
+
+  .support-title {
+    font-size: 30px;
+    width: 250px;
+    line-height: 35px;
+  }
+
+  .support-item {
+    width: 100%;
+  }
+    
+    .support-wrapper {
+    padding: 0px 10px;
+    height: 1000px;
+  }
+
+  .support-expertise-title {
+    font-size: 25px;
+    width: 300px;
+    margin-top: -100px;
+    line-height: 30px;
+  }
+
+  .support-expertise-list {
+    flex-direction: column;
+  }
+
+  .support-expertise-list .support-expertise-item {
+    margin-top: 30px;
+  }
+
+  .support-notebook {
+    top: 685px;
+    width: 390px;
+    height: 450px;
+  }
+
+  .support-notebook img {
+    width: 400px;
+  }
+    
 }
