--- a/css/style.css
+++ b/css/style.css
@@ -1821,4 +1821,171 @@ footer .footer-text {
     width: 400px;
   }
     
+    /*ТАРИФЫ*/
+  
+    .plans {
+    height: 1000px;
+    margin: 0;
+  }
+
+  .plans-card-price h3 {
+    font-size: 40px;
+  }
+
+  .plans .scaled {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  .plans .business-scale .plans-btn {
+    width: 100%;
+    height: 60px;
+    margin-top: 0;
+    background-color: white;
+    color: #F14D34;
+  }
+
+ .plans .business-scale {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  .plans-card-business {
+    z-index: 1;
+  }
+
+  .plans-card-business .plans-wrapper {
+    width: 300px;
+    margin: 0px auto;
+    margin-left: 0;
+  }
+  
+  .plans .scaled .plans-btn {
+    width: 100%;
+    background-color: #F14D34;
+  }
+
+  .plans-body .plans-title {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+
+  .plans-body>p {
+    width: 100%;
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .plans-cards {
+    margin: 0 20px;
+    flex-direction: column;
+  }
+
+  .plans-cards .plans-card {
+    padding: 30px 10px 20px;
+    margin: 10px 0px;
+    width: 100%;
+    height: auto;
+  }
+
+  .plans-footer-text {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+  }
+
+  .plans-card-starter {
+    left: 0px;
+  }
+
+  .plans-card-vip {
+    right: 0px;
+  }
+  
+  .plans-btn {
+    margin: 0px auto;
+    background-color: inherit;
+    color: #f14d34;
+    width: 100%;
+  }
+
+  .plans-card-line {
+    width: 100%;
+  }
+
+  .plans-card .plans-wrapper {
+    width: 100%;
+  }
+
+  .plans-card p {
+    font-size: 14px;
+  }
+
+    /* ПОСЛЕДНИЕ КЕЙСЫ */
+  
+    .cases {
+    margin-top: 1200px;
+  }
+
+  .cases-title {
+    margin-bottom: 30px;
+    font-size: 25px;
+  }
+
+  .cases-items {
+    width: 100%;
+    margin: 0;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cases-width-380 {
+    width: 100%;
+    height: 440px;
+    margin-bottom: 0px;
+  }
+
+  .cases-width-380 img {
+    width: 100%;
+  }
+
+  .cases-text {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .cases-width-380 .cases-text {
+    margin: 20px;
+    padding: 0;
+  }
+
+  .cases-small-case .cases-text {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .cases-width-780 {
+    width: 100%;
+    height: 440px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
+  
+  .cases-width-780 img {
+    width: 100%;
+    height: 320px;
+  }
+
+  .cases-width-780 span {
+    position: absolute;
+    top: -100px;
+    right: 0;
+    padding: 0;
+    color: #fff;
+  }
+
 }
